RESOLVED FIXED288578
[fullscreen] `document-exit-fullscreen-nested-in-iframe.html` WPT regressed after 290822@main
https://bugs.webkit.org/show_bug.cgi?id=288578
Summary [fullscreen] `document-exit-fullscreen-nested-in-iframe.html` WPT regressed a...
Tim Nguyen (:ntim)
Reported 2025-02-25 22:19:54 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-25 22:20:06 PST
Tim Nguyen (:ntim)
Comment 2 2025-02-25 22:35:12 PST
EWS
Comment 3 2025-02-26 11:00:11 PST
Committed 291147@main (22f02541e39c): <https://commits.webkit.org/291147@main> Reviewed commits have been landed. Closing PR #41381 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.