[fullscreen] `document-exit-fullscreen-nested-in-iframe.html` WPT regressed after 290822@main https://bugs.webkit.org/show_bug.cgi?id=288578 rdar://145633558

Reviewed by Alex Christensen.

We were checking isSimpleFullscreenDocument on the wrong document.
I changed the implementation to start iteration at the current frame and go up,
always add the first document inside the loop, and then check the exit conditions.

* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/document-exit-fullscreen-nested-in-iframe-expected.txt:
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::documentsToUnfullscreen):

Canonical link: https://commits.webkit.org/291147@main